bk_ida/gccida/c0/one_pre_gcse_pass
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/one_pre_gcse_pass/src/gcse.c:5559:17: error: use of undeclared identifier 'edge_list_0'; did you mean 'edge_list'?
free_edge_list( edge_list_0); 
                ^~~~~~~~~~~
                edge_list
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/one_pre_gcse_pass/src/gcse.c:4395:26: note: 'edge_list' declared here
static struct edge_list *edge_list;
                         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/one_pre_gcse_pass/src/obj/gcse.o] Error 1
